--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -17,13 +17,7 @@
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/Brushes.xaml" />
-                <ResourceDictionary Source="../Resources/ButtonAsLink.xaml" />
-                <ResourceDictionary Source="../Resources/ListviewWithoutItems.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            
-            <ObjectDataProvider x:Key="StateEnum" MethodName="GetValues"
+                <ObjectDataProvider x:Key="StateEnum" MethodName="GetValues"
                                 ObjectType="{x:Type system:Enum}">
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="types:State"/>
@@ -147,13 +141,11 @@
             </TabControl>
             
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Auftrag speichern"
-                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}">
-                    <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
-                </Button>
-                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Abbrechen" IsCancel="True">
-                    <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
-                </Button>
+                <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Auftrag speichern"
+                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                        Content="{iconPacks:PackIconFontAwesome Check}"/>
+                <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
+                        Content="{iconPacks:PackIconFontAwesome Times}"/>
             </StackPanel>
         </Grid>
     </DockPanel>
