--- a/tinyERP/tinyERP/App.xaml
+++ b/tinyERP/tinyERP/App.xaml
@@ -10,6 +10,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro.IconPacks;component/Themes/PackIconFontAwesome.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.Buttons.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.DataGrid.xaml" />
 
                 <!-- Accent and AppTheme setting -->
                 <ResourceDictionary Source="Resources/CustomMetroTheme.xaml"/>
@@ -17,10 +20,13 @@
 
                 <ResourceDictionary Source="Resources/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Colors.xaml"/>
-                <ResourceDictionary Source="Resources/CircleButtonExtend.xaml"/>
+                <ResourceDictionary Source="Resources/CircleButtonNavigation.xaml"/>
                 <ResourceDictionary Source="Resources/DataGridTemplate.xaml"/>
                 <ResourceDictionary Source="Resources/HeaderLabel.xaml"/>
-                
+                <ResourceDictionary Source="Resources/HoverCircleButton.xaml"/>
+                <ResourceDictionary Source="Resources/ListviewWithoutItems.xaml"/>
+                <ResourceDictionary Source="Resources/ButtonAsLink.xaml"/>
+
                 <ResourceDictionary>
                     <converter:BooleanToRevenueConverter x:Key="MyBooleanToRevenueConverter"/>
                     <converter:EnumToDescriptionConverter x:Key="MyEnumToDescriptionConverter"/>
