--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -13,14 +13,6 @@
                       BorderThickness="1"
                       Language="de-CH">
 
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources\Brushes.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
-
     <DockPanel>
         <Grid DockPanel.Dock="Left" Width="120" Background="{StaticResource AccentColorBrush2}">
             <Grid.RowDefinitions>
@@ -29,7 +21,7 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Button Tag="0"  Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100" Command="{Binding SwitchTabCommand}" 
+            <Button Tag="0"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource SelectedTabConverter}">
@@ -39,7 +31,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="Cash" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="1" Tag="1"  Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100" Command="{Binding SwitchTabCommand}" 
+            <Button Grid.Row="1" Tag="1"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                      CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource SelectedTabConverter}">
@@ -49,7 +41,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="Archive" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="2" Tag="2"  Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100" Command="{Binding SwitchTabCommand}" 
+            <Button Grid.Row="2" Tag="2"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource SelectedTabConverter}">
@@ -59,7 +51,7 @@
                 </Button.IsEnabled>
                 <iconPacks:PackIconMaterial Kind="AccountMultiple" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="3" Tag="3"  Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100" Command="{Binding SwitchTabCommand}" 
+            <Button Grid.Row="3" Tag="3"  Style="{DynamicResource CircleButtonNavigation}" Command="{Binding SwitchTabCommand}" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=Tag}">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource SelectedTabConverter}">
