--- a/tinyERP/tinyERP/Resources/ButtonAsLink.xaml
+++ b/tinyERP/tinyERP/Resources/ButtonAsLink.xaml
@@ -1,31 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:tinyERP.UI.Resources">
-    <Style
-        x:Key="LinkButton"
-        TargetType="Button">
-        <Setter
-            Property="Template">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <Style x:Key="LinkButton" TargetType="Button">
+        <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate
-                    TargetType="Button">
-                    <TextBlock
-                        TextDecorations="Underline">
-                        <ContentPresenter /></TextBlock>
+                <ControlTemplate TargetType="Button">
+                    <TextBlock TextDecorations="Underline">
+                        <ContentPresenter />
+                    </TextBlock>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter
-            Property="Foreground"
-            Value="{StaticResource AccentColorBrush4}" />
+        <Setter Property="Foreground" Value="{StaticResource AccentColorBrush4}" />
         <Style.Triggers>
-            <Trigger
-                Property="IsMouseOver"
-                Value="true">
-                <Setter
-                    Property="Foreground"
-                    Value="{StaticResource HighlightBrush}" />
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="Foreground" Value="{StaticResource HighlightBrush}" />
             </Trigger>
         </Style.Triggers>
     </Style>
-</ResourceDictionary>
+    
+</ResourceDictionary>       
