--- a/tinyERP/tinyERP/Resources/CircleButtonNavigation.xaml
+++ b/tinyERP/tinyERP/Resources/CircleButtonNavigation.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="CircleButtonExtend" TargetType="{x:Type ButtonBase}"
-           BasedOn="{StaticResource MahApps.Metro.Styles.MetroCircleButtonStyle}">
+    <Style x:Key="CircleButtonNavigation" TargetType="{x:Type ButtonBase}"
+           BasedOn="{StaticResource MetroCircleButtonStyle}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource MetroCircleButtonFocusVisual}" />
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Height" Value="100" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ButtonBase}">
@@ -16,7 +18,7 @@
                                  Opacity="0" />
                         <Ellipse x:Name="ellipse"
                                  Margin="4"
-                                 Stroke="{DynamicResource BorderBrush}"
+                                 Stroke="{DynamicResource BlackBrush}"
                                  StrokeThickness="{Binding RelativeSource={x:Static RelativeSource.TemplatedParent}, Path=BorderThickness.Left}" />
                         <ContentPresenter x:Name="PART_ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
@@ -61,4 +63,5 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
 </ResourceDictionary>
