--- a/tinyERP/tinyERP/Views/BudgetView.xaml
+++ b/tinyERP/tinyERP/Views/BudgetView.xaml
@@ -11,14 +11,7 @@
 
     <UserControl.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/Brushes.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            <Style TargetType="DatePickerTextBox">
-                <Setter Property="IsReadOnly" Value="True" />
-                <Setter Property="VerticalAlignment" Value="Center" />
-                <Setter Property="Padding" Value="2" />
-            </Style>
+
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -38,7 +31,7 @@
             </Border>
         </StackPanel>
 
-        <TabControl Margin="10,50,10,0" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
+        <TabControl Margin="10,50,10,10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
             <TabItem Header="Budgetübersicht">
                 <DockPanel>
                     <StackPanel DockPanel.Dock="Top" Margin="0,10">
@@ -61,16 +54,13 @@
                         </Border>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10" DockPanel.Dock="Bottom">
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding NewBudgetCommand}" ToolTip="Neues Budget hinzufügen">
-                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="40" Height="40" />
-                        </Button>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding EditBudgetCommand}" ToolTip="Budget bearbeiten">
-                            <iconPacks:PackIconMaterial Kind="PencilBox" Width="40" Height="40" />
-                        </Button>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding DeleteBudgetCommand}" ToolTip="Budget löschen">
-                            <iconPacks:PackIconMaterial Kind="DeleteCircle" Width="40" Height="40" />
-                        </Button>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" DockPanel.Dock="Bottom">
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding NewBudgetCommand}" ToolTip="Neues Budget hinzufügen"
+                                Content="{iconPacks:PackIconFontAwesome Plus}"/>
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding EditBudgetCommand}" ToolTip="Budget bearbeiten"
+                            Content="{iconPacks:PackIconFontAwesome Pencil}"/>
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding DeleteBudgetCommand}" ToolTip="Budget löschen"
+                            Content="{iconPacks:PackIconFontAwesome Trash}"/>
                     </StackPanel>
                     <Border>
 
@@ -93,7 +83,7 @@
             </TabItem>
 
             <TabItem Header="Buchungen">
-                <DockPanel Margin="0,10">
+                <DockPanel Margin="0,10,0,0">
                     <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                         <TextBox x:Name="SearchBox" Width="200" Height="20" controls:TextBoxHelper.Watermark="Suchbegriff eingeben..." ToolTip="Suche nach Bezeichnung oder Kategorie">
                             <TextBox.InputBindings>
@@ -103,15 +93,12 @@
                         <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0,0,130,0" BorderThickness="0" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding ElementName=SearchBox, Path=Text}" ToolTip="Suche starten">
                             <iconPacks:PackIconMaterial Kind="Magnify" Width="20" Height="20" />
                         </Button>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding NewTransactionCommand}" ToolTip="Neue Buchung hinzufügen">
-                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="40" Height="40" />
-                        </Button>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding EditTransactionCommand}" CommandParameter="{Binding ElementName=TransactionsDataGrid}" ToolTip="Auftrag bearbeiten">
-                            <iconPacks:PackIconMaterial Kind="PencilBox" Width="40" Height="40" />
-                        </Button>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding DeleteTransactionsCommand}" CommandParameter="{Binding SelectedItems, ElementName=TransactionsDataGrid}" ToolTip="Buchung löschen">
-                            <iconPacks:PackIconMaterial Kind="DeleteCircle" Width="40" Height="40" />
-                        </Button>
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding NewTransactionCommand}" ToolTip="Neue Buchung hinzufügen"
+                                Content="{iconPacks:PackIconFontAwesome Plus}"/>
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding EditTransactionCommand}" CommandParameter="{Binding ElementName=TransactionsDataGrid}" ToolTip="Auftrag bearbeiten" 
+                                Content="{iconPacks:PackIconFontAwesome Pencil}"/>
+                        <Button Style="{StaticResource HoverCircleButton}" Command="{Binding DeleteTransactionsCommand}" CommandParameter="{Binding SelectedItems, ElementName=TransactionsDataGrid}" ToolTip="Buchung löschen"
+                                Content="{iconPacks:PackIconFontAwesome Trash}"/>
                     </StackPanel>
 
                     <DataGrid x:Name="TransactionsDataGrid"  AutoGenerateColumns="False" ItemsSource="{Binding TransactionList}" SelectedItem="{Binding SelectedTransaction}" IsReadOnly="True"
