--- a/tinyERP/tinyERP/Views/EditTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/EditTransactionView.xaml
@@ -12,15 +12,6 @@
     Title="Buchung bearbeiten"
     Width="550" MinWidth="550" Height="350" MinHeight="350" MaxHeight="350">
 
-    <controls:MetroWindow.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/Brushes.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-
-    </controls:MetroWindow.Resources>
-
     <DockPanel>
         <Grid Margin="10">
             <Grid.RowDefinitions>
@@ -66,13 +57,11 @@
             <TextBox Grid.Row="3" Grid.Column="0" Margin="10,34,10,10"
                      Text="{Binding Comment}" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" />
             <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung speichern"
-                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}">
-                    <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
-                </Button>
-                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Abbrechen" IsCancel="True">
-                    <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
-                </Button>
+                <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Buchung speichern"
+                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                        Content="{iconPacks:PackIconFontAwesome Check}"/>
+                <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
+                        Content="{iconPacks:PackIconFontAwesome Times}"/>
             </StackPanel>
         </Grid>
     </DockPanel>
