--- a/tinyERP/tinyERP/App.xaml
+++ b/tinyERP/tinyERP/App.xaml
@@ -26,6 +26,7 @@
                 <ResourceDictionary Source="Resources/HoverCircleButton.xaml"/>
                 <ResourceDictionary Source="Resources/ListviewWithoutItems.xaml"/>
                 <ResourceDictionary Source="Resources/ButtonAsLink.xaml"/>
+                <ResourceDictionary Source="Resources/ListboxAsRadiobutton.xaml"/>
 
                 <ResourceDictionary>
                     <converter:BooleanToRevenueConverter x:Key="MyBooleanToRevenueConverter"/>
